<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.stockportfoliomanager.app.AddInvestmentFragment"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:id="@+id/layout_add_edit_transaction"
    >

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layout_add_inv"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="?attr/actionBarSize"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/default_text"
            android:text="@string/stock_name"
            android:id="@+id/txt_stock_name"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/textViewStockName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/default_text"
            android:layout_weight="3"
            android:text="Infosys " />
    </TableRow>

    <TableRow
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/default_text"
            android:text="@string/transaction_type"
            android:id="@+id/txt_transaction_type"
            android:layout_weight="2"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_transaction_type"
            android:layout_weight="3"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            style="@style/default_text"
            android:id="@+id/txt_date"
            android:layout_weight="2"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/default_edit_text"
            android:id="@+id/edit_text_date"
            android:inputType="date"
            android:focusable="false"
            android:layout_weight="3"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/default_text"
            android:text="@string/no_of_units"
            android:id="@+id/txt_unit"
            android:layout_weight="2"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/default_edit_text"
            android:id="@+id/edit_text_unit"
            android:inputType="number"
            android:layout_weight="3"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/default_text"
            android:text="@string/brokerage"
            android:id="@+id/txt_brokerage"
            android:layout_weight="2"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/default_edit_text"
            android:id="@+id/edit_text_brokerage"
            android:inputType="numberDecimal"
            android:layout_weight="3"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/default_text"
            android:text="@string/price"
            android:id="@+id/txt_price"
            android:layout_weight="2"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/default_edit_text"
            android:id="@+id/edit_text_price"
            android:inputType="numberDecimal"
            android:layout_weight="3"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/default_text"
            android:text="@string/div_amount"
            android:id="@+id/txt_div_amount"
            android:layout_weight="2"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/default_edit_text"
            android:id="@+id/edit_text_div_amount"
            android:inputType="numberDecimal"
            android:layout_weight="3"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/default_text"
            android:text="@string/offered"
            android:id="@+id/txt_offered"
            android:layout_weight="2"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/default_edit_text"
            android:id="@+id/edit_text_offered"
            android:inputType="number"
            android:layout_weight="3"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/default_text"
            android:text="@string/held"
            android:id="@+id/txt_held"
            android:layout_weight="2"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/default_edit_text"
            android:id="@+id/edit_text_held"
            android:inputType="number"
            android:layout_weight="3"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/default_text"
            android:layout_weight="2"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/default_button"
            android:text="@string/add_transaction_btn"
            android:id="@+id/btn_add_edit_trans"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="3"
            />
    </TableRow>
</TableLayout>

</ScrollView>

